[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = { version = "0.1" }
bech32 = { version = "0.6.0" }
digest = { version = "0.9.0" }
bitvec = { version = "0.17.4" }
failure = { version = "0.1.8", default-features = false }
gyu-model = { path = "../model", version = "0.1.0", default-features = false }
rand = { version = "0.7", default-features = false }
rand_xorshift = { version = "0.2" }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
hmac = { version = "0.7.0" }
libsecp256k1 = { version = "0.3.5", default-features = false, features = [
    "hmac",
] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.8", default-features = false }
pbkdf2 = { version = "0.3.0", features = [
    "parallel",
], default-features = false }

regex = { version = "1.3" }
tiny-keccak = { version = "1.4" }
