[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base58 = { version = "0.1" }
base58-monero = { version = "0.2.0" }
