[package]
name = "gyu-model"
version = "0.1.0"
edition = "2021"


[dependencies]
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base58 = { version = "0.1" }
base58-monero = { version = "0.2.0" }
bech32 = { version = "0.6" }
hex = { version = "0.4.2", default-features = false }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, features = [
    "hmac",
] }
crypto-mac = { version = "0.7.0" }
ripemd160 = { version = "0.8", default-features = false }
rlp = { version = "0.4", default-features = false }
sha2 = { version = "0.8", default-features = false }
ff = { version = "0.6.0", optional = true }
uint = { version = "0.8.3", default-features = false }

[features]
default = ["std"]
std = ["ff"]
